--- a/pollution-biv.config.yaml
+++ b/pollution-biv.config.yaml
@@ -33,7 +33,7 @@ variables:
       Potevamo già prevederlo in partenza poichè il dataset presenta la variabile mort corretta per età.
       I residui appaiono distribuiti casualmente intorno allo zero senza pattern evidenti e i residui standardizzati
       non si discotano troppo dalla retta dei quantili teorici della gaussiana tranne che nelle code.
-      Inoltre la Distanza di Cooke mostra la presenza di tre valori "anomali" (37, 49, 56) 
+      Inoltre la Distanza di Cook mostra la presenza di tre valori "anomali" (37, 49, 56) 
       che sembrano incidere abbastanza nel modello.
   - colname: "popn"
     tgcol: "mort"
@@ -43,7 +43,7 @@ variables:
       Si potrebbe pensare che la suddetta variabile possa incidere sul modello di previsione finale.
       I residui sembrano distribuirsi in maniera abbastanza casuale attorno allo zero e 
       il qqplot suggerisce che i residui si distribuiscono in maniera gaussiana.
-      La distanza di Cooke evidenzia tre possibili outlier, ovvero la misurazione 37, 38 e 49
+      La distanza di Cook evidenzia tre possibili outlier, ovvero la misurazione 37, 38 e 49
   - colname: "educ"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
@@ -52,7 +52,7 @@ variables:
       mort pare alquanto contributiva al modello. 
       I residui sono distribuiti in maniera aleatoria rispetto allo zero e il qqplot suggerisce
       l'andamento di una gaussiana ma con delle code più pesanti.
-      La distanza di Cooke evidenzia tre outlier (28, 37, 59) che potrebbero influire sul modello.
+      La distanza di Cook evidenzia tre outlier (28, 37, 59) che potrebbero influire sul modello.
   - colname: "hous"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
@@ -61,7 +61,7 @@ variables:
       Si pensa che la variabile possa influire sul modello.
       I residui sono distribuiti in maniera casuale attorno allo zero.
       Il qqplot suggerisce un andamento gaussiano ma con code più leggere.
-      La distanza di Cooke mostra tre valori, il 5, 37 e 49, che potrebbero influenzare la distribuzione.
+      La distanza di Cook mostra tre valori, il 5, 37 e 49, che potrebbero influenzare la distribuzione.
   - colname: "dens"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
@@ -70,7 +70,7 @@ variables:
       Si pensa che la variabile non influisca sul modello.
       I residui sono distribuiti in maniera casuale attorno allo zero.
       Il qqplot mostra che i residui standardizzati si allineino abbastanza secondo un andamento gaussiano.
-      La distanza di Cooke mostra tre valori, il 5, 37 e 59, che potrebbero influenzare la distribuzione.
+      La distanza di Cook mostra tre valori, il 5, 37 e 59, che potrebbero influenzare la distribuzione.
   - colname: "nonw"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
@@ -80,7 +80,7 @@ variables:
       definisca il modello.
       I residui si dispongono in maniera casuale attorno allo zero e il qqplot mostra 
       un andamento gaussiano con forse una leggere tendenza ad avere delle code più leggere.
-      La distanza di Cooke mostra tre valori, il 31, 37 e 49, che potrebbero influenzare la distribuzione.
+      La distanza di Cook mostra tre valori, il 31, 37 e 49, che potrebbero influenzare la distribuzione.
   - colname: "wwdrk"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
@@ -89,7 +89,7 @@ variables:
       Si pensa che la variabile non influisca sul modello.
       I residui sono distribuiti in maniera casuale attorno allo zero.
       Il qqplot mostra che i residui standardizzati si allineino abbastanza secondo un andamento gaussiano.
-      La distanza di Cooke mostra tre valori, il 5, 37 e 59, che potrebbero influenzare la distribuzione.
+      La distanza di Cook mostra tre valori, il 5, 37 e 59, che potrebbero influenzare la distribuzione.
   - colname: "poor"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
@@ -99,7 +99,7 @@ variables:
       I residui sono distribuiti in maniera casuale attorno allo zero.
       Il qqplot mostra che i residui standardizzati non seguano molto bene un andamento gaussiano, o almeno solo 
       per una minima parte. Si evidenziano delle code molto più leggere.
-      La distanza di Cooke mostra tre valori, il 32, 37 e 49, che potrebbero essere possibili outliers.
+      La distanza di Cook mostra tre valori, il 32, 37 e 49, che potrebbero essere possibili outliers.
   - colname: "hc"
     tgcol: "mort"
     run: ["doscatterplot","dorsq", "uselog"]
@@ -132,7 +132,7 @@ variables:
       Si suppone che la variabile possa influire sul modello.
       I residui sono distribuiti in maniera casuale attorno allo zero.
       Il qqplot mostra che i residui standardizzati seguono ababstanza precisamente l'andamento gaussiano.
-      La distanza di Cooke evidenzia un valore soprattutto che potrebbe influire sul modello ed è il numero 37.
+      La distanza di Cook evidenzia un valore soprattutto che potrebbe influire sul modello ed è il numero 37.
   - colname: "humid"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
