--- a/pollution-biv.config.yaml
+++ b/pollution-biv.config.yaml
@@ -15,39 +15,39 @@ variables:
       La variabile jant ha un indice R-squared di 0.0009 e un p-value molto elevato pari a 0.82.\
       Si può già supporre che questa variabile non incida in maniera utile sulla mortalità.\
       Anche lo scatterplot conferma questa ipotesi, in quanto la retta di regressione non ha una pendenza significativa .\
-      Dall'analisi dei residui i valori sembrano distribuirsi in maniera abbastanza causuale attorno allo zero,
-      nel qqplot si osserva che i punti si distribuiscono in maniera abbastanza lineare nonostanza la presenza di alcuni outlier, come i punti 37 e 49.\
+      Dall'analisi dei residui i valori sembrano distribuirsi in maniera abbastanza casuale attorno allo zero,
+      nel qqplot si osserva che i punti si distribuiscono in maniera abbastanza lineare nonostante la presenza di alcuni outlier, come i punti 37 e 49.\
       Anche nella distanza di Cook si possono osservare 3 outliers (32, 37, 49) che potrebbero influire sul modello.\
-      Si ipotizza che questa variabile non debba essere presa in considerazione per la costruzione del fit multivariato.
+      Si ipotizza che questa variabile non debba essere presa in considerazione per la costruzione del modello multivariato.
   - colname: "jult"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
     desc: |
       La variabile jult ha un indice R-squared di 0.077 e un p-value relativamente alto pari a 0.03.\
       Dallo scatterplot si nota che la leggera dipendenza è positiva, ovvero un aumento della temperatura in luglio potrebbe essere associato ad un aumento della mortalità.\
-      Dall'analisi dei residui i valori sembrano distribuirsi in maniera abbastanza causuale attorno allo zero e il qqplot suggerisce la presenza di due punti all'estremità, 
-      37 e 56, che sembrano deviare dalla retta diagonale. Tutti gli altri  punti sembrano più o meno assumere un comportamento gaussiano anchese con qualche ragionevole dubbio.\
-      Le osservazini 16, 37 e 56 hanno valori di Cook's distance più alti rispetto alle altre, suggerendo che sono influenti e potrebbero essere outliers.
+      Dall'analisi dei residui i valori sembrano distribuirsi in maniera abbastanza casuale attorno allo zero e il qqplot suggerisce la presenza di due punti all'estremità, 
+      37 e 56, che sembrano deviare dalla retta diagonale. Tutti gli altri  punti sembrano più o meno assumere un comportamento gaussiano anche se con qualche ragionevole dubbio.\
+      Le osservazini 16, 37 e 56 hanno valori della distanza di Cook più alti rispetto alle altre, suggerendo che sono influenti e potrebbero essere outliers.
   - colname: "ovr65"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
     desc: |
       La variabile ovr65 ha un indice R-squared di 0.03 e un p-value abbastanza elevato pari a 0.18.\
-      Dal questi valori si ipotizza che la variabile non influisca in maniera consistente sul modello.\
+      Da questi valori si ipotizza che la variabile non influisca in maniera consistente sul modello.\
       Lo si può notare anche dallo scatterplot, in quanto la retta di regressione non ha una pendenza significativa.\
       Potevamo già prevederlo in partenza poichè il dataset presenta la variabile mort corretta per età.\
       I residui appaiono distribuiti casualmente intorno allo zero senza pattern evidenti e i residui standardizzati
-      non si discotano troppo dalla retta dei quantili teorici della gaussiana tranne che nelle code.\
-      Inoltre la Distanza di Cook mostra la presenza di tre valori "anomali" (37, 49, 56) 
+      non si discostano troppo dalla retta dei quantili teorici della gaussiana tranne che nelle code.\
+      Inoltre la distanza di Cook mostra la presenza di tre valori "anomali" (37, 49, 56) 
       che sembrano incidere abbastanza nel modello.
   - colname: "popn"
     tgcol: "mort"
     run: ["doscatterplot","dorsq"]
     desc: |
-      L'indice R-squared della variabil popn è pari 0.13 e il suo p-value 0.0051.\
+      L'indice R-squared della variabile popn è pari 0.13 e il suo p-value 0.0051.\
       Si potrebbe pensare che la suddetta variabile possa incidere sul modello di previsione finale.\
       Lo scatterplot mostra una dipendenza positiva tra la variabile popn e la variabile target, 
-      ovvero un aumento del numero di famigliari è associato ad un leggero aumento del tasso odi mortalità.\
+      ovvero un aumento del numero di familiari è associato ad un leggero aumento del tasso di mortalità.\
       I residui sembrano distribuirsi in maniera abbastanza casuale attorno allo zero e 
       il qqplot suggerisce che i residui si distribuiscono in maniera gaussiana.\
       La distanza di Cook evidenzia tre possibili outlier, ovvero la misurazione 37, 38 e 49.
@@ -90,11 +90,11 @@ variables:
     desc: |
       La variabile nonw ha un indice R-squared di 0.41 e un p-value di 0.\
       Il valore straordinario del p-value suggerisce che questa variabile sia quella che più
-      definisca il modello.\
+      definisce il modello.\
       Dallo scatterplot si osserva una dipendenza positiva tra la variabile nonw e la variabile target,
       ovvero un aumento della popolazione non bianca è associato ad un aumento della mortalità.\
       I residui si dispongono in maniera casuale attorno allo zero e il qqplot mostra 
-      un andamento gaussiano con forse una leggere tendenza ad avere delle code più leggere.\
+      un andamento gaussiano con forse una leggera tendenza ad avere delle code più leggere.\
       La distanza di Cook mostra tre valori, il 31, 37 e 49, che potrebbero influenzare la distribuzione.
   - colname: "wwdrk"
     tgcol: "mort"
@@ -105,7 +105,7 @@ variables:
       Lo scatterplot mostra comunque un leggera dipendenza negativa tra la variabile wwdrk e la variabile target,
       ovvero un aumento di occupati nelle professioni meno manuali potrebbe essere associato ad un diminuzione della mortalità.\
       I residui sono distribuiti in maniera casuale attorno allo zero.\
-      Il qqplot mostra che i residui standardizzati si allineino abbastanza secondo un andamento gaussiano.\
+      Il qqplot mostra che i residui standardizzati si allineano abbastanza secondo un andamento gaussiano.\
       La distanza di Cook mostra tre valori, il 5, 37 e 59, che potrebbero influenzare la distribuzione.
   - colname: "poor"
     tgcol: "mort"
@@ -116,7 +116,7 @@ variables:
       Dallo scatterplot si osserva una dipendenza positiva tra la variabile poor e la variabile target,
       ovvero un aumento della popolazione in condizioni di povertà è associato ad un aumento della mortalità.\
       I residui sono distribuiti in maniera casuale attorno allo zero.\
-      Il qqplot mostra che i residui standardizzati non seguano molto bene un andamento gaussiano, o almeno solo 
+      Il qqplot mostra che i residui standardizzati non seguono molto bene un andamento gaussiano, o almeno solo 
       per una minima parte. Si evidenziano delle code molto più leggere.\
       La distanza di Cook mostra tre valori, il 32, 37 e 49, che potrebbero essere possibili outliers.
   - colname: "hc"
@@ -128,8 +128,8 @@ variables:
       Si suppone dunque che la variabile non influisca sul modello.\
       Dallo scatterplot si osserva infatti che la retta di regressione non ha una pendenza significativa.\
       I residui sono distribuiti in maniera casuale attorno allo zero.\
-      Il qqplot mostra che i residui standardizzati seguano sufficientemente bene un andamento gaussiano.\
-      Dalla Cook's Distance si notano il valore 29, 47 e 49 che paiono essere possibili valori anomali.
+      Il qqplot mostra che i residui standardizzati seguono sufficientemente bene un andamento gaussiano.\
+      Dalla distanza di Cook si notano i valori 29, 47 e 49 che paiono essere possibili valori anomali.
   - colname: "nox"
     tgcol: "mort"
     run: ["doscatterplot","dorsq", "uselog"]
@@ -142,8 +142,8 @@ variables:
       Infatti dallo scatterplot si osserva una dipendenza positiva tra la variabile nox e la variabile target,
       ovvero un aumento della concentrazione di ossidi di azoto può essere associato ad un aumento della mortalità.\
       I residui sono distribuiti in maniera casuale attorno allo zero.\
-      Mentre dai  QQplot non sembra che la distribuzione rispetti l'andamento di una gaussiana. Inoltre la 
-      Distanza di Cook suggerisce tre valori che si discostano, quali il 29, 47 e 49, e soprattutto il primo 
+      Dal QQplot non sembra che la distribuzione rispetti l'andamento di una gaussiana. Inoltre la 
+      distanza di Cook suggerisce tre valori che si discostano, quali il 29, 47 e 49, e soprattutto il primo 
       pare incidere in maniera significativa sul modello.
   - colname: "so2"
     tgcol: "mort"
@@ -165,5 +165,5 @@ variables:
       valore molto alto si suppone che la variabile non influisca sul modello.\
       Dallo scatterplot si osserva infatti che la retta di regressione non ha una pendenza significativa.\
       I residui sono distribuiti in maniera casuale attorno allo zero.\
-      Il qqplot mostra che i residui standardizzati si attengono abbastanza bene all'andamento della retta.\
-      La Cook's Distance mostra principalemente due valori che sono anomali, ovvero il 18 e 49.
+      Il qqplot mostra che i residui standardizzati si attengono abbastanza bene all'andamento gaussiano.\
+      La distanza di Cook mostra principalemente due valori che sono anomali, ovvero il 18 e 49.
